Project, Developer from api done

--- a/public/listDev.html
+++ b/public/listDev.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Produk</title>
+    <!-- <link rel="stylesheet" href="../src/css/table.css"> -->
+
     <style>
-        table {
+        /* table {
             width: 50%;
             border-collapse: collapse;
             margin: 20px 0;
@@ -21,17 +24,19 @@
         }
         tr:nth-child(even) {
             background-color: #f9f9f9;
-        }
+        } */
     </style>
 </head>
+
 <body>
-    <h1>Daftar Produk</h1>
-    <table id="products">
+    <h1>Daftar Developers</h1>
+    <table id="developers">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Nama Produk</th>
-                <th>Harga</th>
+                <th>Nama</th>
+                <th>Email</th>
+                <th>Role</th>
             </tr>
         </thead>
         <tbody></tbody>
@@ -41,5 +46,5 @@
     <!-- Script Bundle dari TypeScript -->
     <!-- <script type="module" src="dist/app.js"></script> -->
 </body>
-</html>
 
+</html>
