--- a/public/users.html
+++ b/public/users.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Pengguna</title>
     <style>
-        body {
+        /* body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
@@ -28,9 +29,10 @@
         }
         td {
             text-align: center;
-        }
+        } */
     </style>
 </head>
+
 <body>
     <h1>Daftar Pengguna</h1>
     <table id="usersTable">
@@ -47,8 +49,9 @@
             <!-- Data pengguna akan ditambahkan di sini -->
         </tbody>
     </table>
-   
+
     <script type="module" src="bundle.js"></script>
     <!-- <script type="module" src="app.js"></script> -->
 </body>
+
 </html>
