--- a/public/index.html
+++ b/public/index.html
@@ -6,63 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Utama</title>
 
-    <style>
-        .container {
-            margin: auto;
-            padding: .2rem 1.2rem;
-            width: 80vw;
-            border: 1px solid #007BFF;
-            border-radius: 5px;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1 {
-            margin-top: 50px;
-        }
-
-        nav {
-            margin-top: 20px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #007BFF;
-            font-size: 18px;
-            margin: 10px;
-        }
-
-        a:hover {
-            color: #0056b3;
-        }
-
-        table {
-            width: 50%;
-            border-collapse: collapse;
-            margin: 20px 0;
-            font-family: Arial, sans-serif;
-        }
-
-        th,
-        td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -78,17 +22,5 @@
     <!-- Script TypeScript -->
     <script type="module" src="bundle.js"></script>
 </body>
-<!-- <body>
-    <h1>Selamat Datang di Aplikasi Demo TypeScript</h1>
-    <nav>
-        <a href="#" id="welcome">Halaman Utama</a>
-        <a href="#list" id="list">Daftar Produk</a>
-        <a href="#users" id="users">Daftar Pengguna</a>
-    </nav>
-    <div id="content"></div>
-
-    
-    <script type="module" src="dist/app.js"></script>
-</body> -->
 
 </html>
